# python-study-group

./: .gitignore  README.md
animation/: animation.ipynb  readme.md
cvxpy-datacleaning/: README.MD  data_cleaning.ipynb  mosek.lic
dask/: README.md  dask_delayed.ipynb  dask_numpy.ipynb  dask_pandas.ipynb
gradient_boosting/: Interactive_experimentation.ipynb  pyproject.toml  requirements.txt
ipywidgets/: README.MD  WidgetExample.ipynb  quick_interactive.ipynb  requirements.txt
numba/: ExploreNumba_matrix_power.ipynb  ExploreNumba_series.ipynb  README.md
optuna/: 01 basics.ipynb  02 neural_network_fashion_mnist.ipynb  functions.py  requirements.txt
probabilistic_forecast_evaluation/: Evaluation of probabilistic forecasts of time series.pptx  Explore_xskillscore.ipynb  crps.ipynb  pyproject.toml
rasterio/: README.md  basic.ipynb  gebco_2020_n57.5_s55.0_w10.0_e13.0.tif  rasterio.pptx  rasterio_and_xarray.ipynb  to_from_dfs2.ipynb  wms.ipynb
rest_api/: 01_get_data.ipynb  engine_execution.ipynb  requirements.txt  yolo_api.py
web_flask/: Readme.md  app.py
web_flask/templates/: index.html  layout.html  sampling.html  search.html
web_flask/templates/interpolation/: 1d.html  idw.html  rbf.html
xarray/: Xarray_intro.ipynb  Xarray_intro_extended.ipynb
