[tool.poetry]
name = "check_probabilistic_evaluation"
version = "0.1.0"
description = ""
authors = ["laurafroelich <lafr@dhigroup.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
xskillscore = "^0.0.19"
numpy = "^1.20.1"
pandas = "^1.2.3"
plotly = "^4.14.3"
matplotlib = "^3.3.4"
jupyterlab = "^3.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
